--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <img src="images/image (1).jpg" alt="personal-headshot">
       <h2>Hello!</h2>
       <p>
-        I'm a<a href="https://www.cis.upenn.edu/">computer science</a>student at the<a href="https://www.upenn.edu/">University of Pennsylvania,</a>studying in the Jerome Fisher
+        I'm a sophomore studying<a href="https://www.cis.upenn.edu/">computer science</a>at the<a href="https://www.upenn.edu/">University of Pennsylvania,</a>studying in the Jerome Fisher
         M&T program.  I'm interested in software engineering. 
       </p>
     </div>
@@ -41,7 +41,27 @@
 
     <!-- Projects -->
     <div class="projects">
-      <h2>Projects</h2>
+      <h2>What I've Done</h2>
+
+      <div class="project-row">
+        <p>Interned at Fitted: 
+          <ul>
+            <li>Developed front-end React-native, JavaScript/HTML/CSS iOS mobile screens based on Figmas.</li>
+            <li>Used Firebase authentication for backend. Extensively used version control. Product launches in the fall.</li>
+          </ul>
+        </p>
+      </div>
+
+      <div class="project-row">
+        <p>Interned at Overline:
+          <ul>
+            <li>Utilized front-end React-native, Redux, JavaScript to modularize codebase for crypto exchange platform.</li>
+            <li>Wrote document detailing troubleshooting errors for the Android mobile platform.</li>
+          </ul>
+
+
+        </p>
+      </div>
       
       <div class="project-row">
         <span 
@@ -84,10 +104,10 @@
         <td>
           <span 
             class="iconify" 
-            data-icon="logos:rails" 
+            data-icon="logos:react"
             data-inline="false"
-          ></span>            
-          &nbsp; Ruby on Rails
+          ></span>     
+          &nbsp; React
         </td>
       </tr>
 
@@ -104,13 +124,32 @@
         <td>
           <span 
             class="iconify" 
-            data-icon="whh:html" 
+            data-icon="logos:python" 
             data-inline="false"
           ></span>            
-          &nbsp; HTML/CSS
+          &nbsp; Python (PyTorch)
         </td>
       </tr>       
     </table>
+
+    <hr />
+
+    <!-- What I've Been Reading -->
+    <div class="projects">
+      <h2>What I've Been Reading</h2>
+      <h3>"The man who does not read has no advantage over the man who cannot read." —Mark Twain</h3>
+      <div class="project-row">
+        <p>
+          <ul>
+            <li>Into the Magic Shop: A Neurosurgeon's Quest to Discover the Mysteries of the Brain and the Secrets of the Heart by James Doty, MD</li>
+            <li>How to Avoid a Climate Disaster: The Solutions We Have and the Breakthroughs We Need by Bill Gates</li>
+            <li>A Promised Land by Barry O</li>
+            <li>The Ride of a Lifetime: Lessons Learned from 15 Years as CEO of the Walt Disney Company by Bob Iger</li>
+            <li>What it Takes: Lessons In The Pursuit Of Excellence by Stephen A. Schwarzman</li>
+          </ul>
+        </p>
+      </div>
+    </div>
 
     <hr />
 
